--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Carved Rock Fitness</title>
+    <title>Anidra Katiyar SISTec-R</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <link href="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/bootstrap/bootstrap-reboot.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
         <div class="container d-flex flex-column justify-content-center align-items-sm-stretch align-items-md-center">
             <h1 class="col-sm-12">GET A GRIP</h1>
             <h2>20% OFF</h2>
-            <p class="lead">THROUGHOUT THE SEASON</p>
+            <p class="lead">THROUGHOUT THE SEMESTER</p>
         </div>
     </div>
 
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <!-- STORIES -->
+    <!-- Courses -->
     <div class="container crf-story">
         <div class="row">
             <div class="col-lg-3 col-md-6"><a href="#">
